# open-knowledge-bundler

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  demo.tape
benchmarks/graphrag-bench/: EXTRACTOR_HANDOFF.md  README.md  extract_graph.py  judge-requirements.txt  prep_questions.py  run_judge.sh  to_grbench.py
browser/: compile.mjs  template.html
cli/: domain.yaml  go.mod  go.sum  main.go  ufo_domain.yaml
cli/agent/: bundle.go  bundle_test.go  config.go  embed.go  logging.go  runner.go  session.go  tools.go  tools_test.go  tui.go
cli/cmd/: agent.go  answer.go  convert_metaqa.go  eval.go  extract.go  generate.go  generate_template.html  graph.go  groups.go  ingest.go  init.go  okf.go  presets.go  query.go  root.go  schema.go  serve.go  web.html
cli/domain/: config.go  model.go
cli/embed/: client.go
cli/eval/: eval.go  eval_test.go  report.go  report_test.go
cli/extract/: chunk.go  corpus.go  emit.go  extract.go  extract_test.go  graph.go  llm.go  llm_openai.go  normalize.go  ontology.go  resolve.go
cli/metaqa/: metaqa.go  metaqa_test.go
cli/store/: db.go  edges.go  nodes.go  search.go
data/: fetch_foursquare.ts  to_ndjson.ts
docs/: cbi_architecture.md  okb_architecture.md
docs/demo/: REQUEST_FOR_DEMOS.md  bundle.tape  grounding.tape
pipeline/: pyproject.toml
pipeline/pipeline/: build_ndjson.py  canonicalize.py  convert.py  extract.py  video_describe.py
test/: domain.8181.yaml  domain.yaml  edges.ndjson  eval-questions.jsonl  eval-vocab.txt  generate_pokemon_qa.py  nodes.ndjson  pokemon-qa.jsonl
test/pokemon-bundle/: log.md  (+2 more)
(+49 files in other folders)
