[project]
name = "ufo-pipeline"
version = "0.1.0"
description = "PDF -> Markdown -> entities/facts -> NDJSON for cbi knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "tqdm>=4.66",
    "tiktoken>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
